--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background: url("background_studio_dark.jpg") no-repeat center center fixed;
+  background: url("background_studio_dark.png") no-repeat center center fixed;
   background-size: cover;
   backdrop-filter: blur(3px);
   color: #fff;
