--- a/style.css
+++ b/style.css
@@ -28,11 +28,16 @@ header.navbar {
   width: auto;
 }
 
-/* Desktop Menu */
-nav {
+/* Nav container */
+nav.nav-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   flex-grow: 1;
+  position: relative;
 }
 
+/* Desktop Menu */
 nav ul.nav-links {
   list-style: none;
   display: flex;
@@ -59,11 +64,12 @@ nav ul li a:hover {
   display: none;
   flex-direction: column;
   cursor: pointer;
-  margin-left: auto;
+  margin-left: 20px;
   margin-right: 10px;
 }
 
-.burger span {
+.burger span,
+.burger div {
   height: 3px;
   width: 25px;
   background-color: #fff;
