--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header.navbar {
 /* Nav container */
 nav.nav-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center; /* centré sur desktop */
   align-items: center;
   flex-grow: 1;
   position: relative;
