--- a/style.css
+++ b/style.css
@@ -193,6 +193,14 @@ nav ul li a .chevron {
     margin-right: auto;
     height: 50px !important;
   }
+
+  main {
+    padding: 20px 20px 25px 20px;
+  }
+
+  footer {
+    margin-top: 30px;
+  }
 }
 
 /* Main Content */
